--- a/package.json
+++ b/package.json
@@ -1,9 +1,25 @@
 {
-  "private": true,
-  "workspaces": [
-    "packages/*"
-  ],
-  "dependencies": {
-    "@polkadot-api/descriptors": "file:.papi/descriptors"
-  }
+    "private": true,
+    "type": "module",
+    "workspaces": [
+        "packages/*"
+    ],
+    "dependencies": {
+        "@polkadot-api/descriptors": "file:.papi/descriptors"
+    },
+    "devDependencies": {
+        "@rollup/plugin-alias": "^5.0.2",
+        "@rollup/plugin-node-resolve": "^15.2.1",
+        "@types/node": "^24.0.10",
+        "esbuild": "^0.21.4",
+        "rollup": "^4.18.0",
+        "rollup-plugin-dts": "^5.3.0",
+        "rollup-plugin-esbuild": "^6.1.0",
+        "tsx": "^4.7.0",
+        "turbo": "^2.5.4",
+        "typescript": "^5.5.0",
+        "vite-tsconfig-paths": "^4.2.0",
+        "vitest": "^1.5.0"
+    },
+    "packageManager": "pnpm@10.11.1"
 }
