--- a/packages/observables/package.json
+++ b/packages/observables/package.json
@@ -1,7 +1,10 @@
 {
-  "name": "@dothome/observables",
-  "version": "0.0.1",
-  "peerDependencies": {
-    "@polkadot-api/descriptors": "*"
-  }
+    "name": "@dothome/observables",
+    "version": "0.0.1",
+    "peerDependencies": {
+        "@polkadot-api/descriptors": "*"
+    },
+    "scripts": {
+        "build": "echo 'no build yet'"
+    }
 }
