got host package working from cli package

--- a/tsconfig.base.json
+++ b/tsconfig.base.json
@@ -23,6 +23,12 @@
         "noFallthroughCasesInSwitch": true,
         "moduleResolution": "Bundler",
         "esModuleInterop": true,
+        "baseUrl": ".",
+        "paths": {
+            "@dothome/host": [
+                "packages/*/src"
+            ],
+        },
         "types": [
             "vitest/importMeta",
             "node"
