--- a/packages/host/package.json
+++ b/packages/host/package.json
@@ -1,6 +1,16 @@
 {
     "name": "@dothome/host",
     "version": "0.0.1",
+    "main": "./dist/index.js",
+    "module": "./dist/index.mjs",
+    "types": "./dist/index.d.ts",
+    "exports": {
+        ".": {
+            "require": "./dist/index.js",
+            "import": "./dist/esm/index.mjs",
+            "types": "./dist/index.d.ts"
+        }
+    },
     "peerDependencies": {
         "@polkadot-api/descriptors": "*"
     },
@@ -12,6 +22,6 @@
         "better-sqlite3": "^11.10.0"
     },
     "scripts": {
-        "build": "echo 'no build yet'"
+        "build": "rollup -c ../../rollup.config.js"
     }
 }
