--- a/package.json
+++ b/package.json
@@ -10,16 +10,21 @@
     "devDependencies": {
         "@rollup/plugin-alias": "^5.0.2",
         "@rollup/plugin-node-resolve": "^15.2.1",
+        "@types/better-sqlite3": "^7.6.13",
         "@types/node": "^24.0.10",
         "esbuild": "^0.21.4",
-        "rollup": "^4.18.0",
-        "rollup-plugin-dts": "^5.3.0",
+        "polkadot-api": "^1.14.0",
+        "rollup": "^4.44.1",
+        "rollup-plugin-dts": "^6.2.1",
         "rollup-plugin-esbuild": "^6.1.0",
         "tsx": "^4.7.0",
         "turbo": "^2.5.4",
         "typescript": "^5.5.0",
         "vite-tsconfig-paths": "^4.2.0",
-        "vitest": "^1.5.0"
+        "vitest": "^3.1.4"
+    },
+    "scripts": {
+        "pub": "pnpm turbo run build && pnpm -r version prerelease --preid dev && pnpm -r publish --tag dev --access public --no-git-checks"
     },
     "packageManager": "pnpm@10.11.1"
 }
