--- a/packages/config/package.json
+++ b/packages/config/package.json
@@ -1,10 +1,26 @@
 {
     "name": "@dothome/config",
     "version": "0.0.1",
+    "main": "./dist/index.js",
+    "module": "./dist/index.mjs",
+    "types": "./dist/index.d.ts",
+    "exports": {
+        ".": {
+            "require": "./dist/index.js",
+            "import": "./dist/esm/index.mjs",
+            "types": "./dist/index.d.ts"
+        }
+    },
+    "bin": {
+        "dothome": "./dist/index.js"
+    },
     "peerDependencies": {
         "@polkadot-api/descriptors": "*"
     },
+    "dependencies": {
+        "@dothome/utils": "workspace:*"
+    },
     "scripts": {
-        "build": "echo 'no build yet'"
+        "build": "rollup -c ../../rollup.config.js"
     }
 }
