--- a/packages/utils/package.json
+++ b/packages/utils/package.json
@@ -1,10 +1,20 @@
 {
     "name": "@dothome/utils",
     "version": "0.0.1",
+    "main": "./dist/index.js",
+    "module": "./dist/index.mjs",
+    "types": "./dist/index.d.ts",
+    "exports": {
+        ".": {
+            "require": "./dist/index.js",
+            "import": "./dist/esm/index.mjs",
+            "types": "./dist/index.d.ts"
+        }
+    },
     "peerDependencies": {
         "@polkadot-api/descriptors": "*"
     },
     "scripts": {
-        "build": "echo 'no build yet'"
+        "build": "rollup -c ../../rollup.config.js"
     }
 }
