--- a/pnpm-workspace.yaml
+++ b/pnpm-workspace.yaml
@@ -2,6 +2,7 @@
 packages:
   # every leaf workspace lives here
   - "packages/*"          # cli, config, host, lambda, observables, utils
+  - ".papi/descriptors"    # 👈 new line
   - "examples/*"
   - "integration-tests/*"
   - "scripts/*"
