--- a/packages/libraries/core/observables/package.json
+++ b/packages/libraries/core/observables/package.json
@@ -1,8 +1,6 @@
 {
-    "name": "@dothome/rpc",
+    "name": "@dothome/observables",
     "version": "0.0.1",
-    "module": "./dist/index.mjs",
-    "types": "./dist/index.d.ts",
     "exports": {
         ".": {
             "import": "./dist/esm/index.mjs",
@@ -13,13 +11,12 @@
         "@polkadot-api/descriptors": "*"
     },
     "devDependencies": {
-        "@types/better-sqlite3": "^7.6.13"
+        "@polkadot-api/descriptors": "workspace:*"
     },
     "dependencies": {
-        "drizzle-orm": "^0.44.2",
-        "better-sqlite3": "^11.10.0"
+        "@dothome/utils": "workspace:*"
     },
     "scripts": {
-        "build": "rollup -c ../../rollup.config.js"
+        "build": "rollup -c ../../../../rollup.config.js"
     }
 }
