--- a/packages/libraries/host/package.json
+++ b/packages/libraries/host/package.json
@@ -1,8 +1,6 @@
 {
     "name": "@dothome/host",
     "version": "0.0.1",
-    "types": "./dist/index.d.ts",
-    "module": "./dist/index.mjs",
     "exports": {
         ".": {
             "types": "./dist/index.d.ts",
@@ -17,6 +15,6 @@
         "better-sqlite3": "^11.10.0"
     },
     "scripts": {
-        "build": "rollup -c ../../rollup.config.js"
+        "build": "rollup -c ../../../rollup.config.js"
     }
 }
