Added all "Core" packages which all build correctly now. - updated rollup.config.js to export .d.ts in a way that preserves directories - all library packages are functional besides `host` & `lambda` which we still need to finish integrating into this new format.

--- a/packages/libraries/core/context/package.json
+++ b/packages/libraries/core/context/package.json
@@ -1,5 +1,5 @@
 {
-    "name": "@dothome/rpc",
+    "name": "@dothome/context",
     "version": "0.0.1",
     "exports": {
         ".": {
@@ -7,14 +7,12 @@
             "types": "./dist/index.d.ts"
         }
     },
-    "devDependencies": {
-        "@types/ws": "^8.18.1"
+    "peerDependencies": {
+        "@polkadot-api/descriptors": "*"
     },
     "dependencies": {
-        "@dothome/observables": "workspace:*",
-        "@dothome/config": "workspace:*",
         "@dothome/utils": "workspace:*",
-        "ws": "^8.18.2"
+        "@dothome/config": "workspace:*"
     },
     "scripts": {
         "build": "rollup -c ../../../../rollup.config.js"
