--- a/packages/libraries/host/package.json
+++ b/packages/libraries/host/package.json
@@ -10,9 +10,20 @@
     "peerDependencies": {
         "@polkadot-api/descriptors": "*"
     },
+    "devDependencies": {
+        "@polkadot-api/descriptors": "workspace:*",
+        "@types/ws": "^8.18.1"
+    },
     "dependencies": {
+        "@dothome/observables": "workspace:*",
+        "@dothome/config": "workspace:*",
+        "@dothome/utils": "workspace:*",
+        "@dothome/rpc": "workspace:*",
+        "@dothome/context": "workspace:*",
         "drizzle-orm": "^0.44.2",
-        "better-sqlite3": "^11.10.0"
+        "better-sqlite3": "^11.10.0",
+        "ws": "^8.18.2",
+        "rxjs": "^7.8.2"
     },
     "scripts": {
         "build": "rollup -c ../../../rollup.config.js"
