WIP getting test cases working again w/ new monorepo structure & new host-app relationship. Getting mock-apps setup for testing.  - Observables functionaly work but type hints need to be fixed

--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
         "vitest": "^3.1.4"
     },
     "scripts": {
+        "test": "vitest",
         "pub": "pnpm turbo run build && pnpm -r version prerelease --preid dev && pnpm -r publish --tag dev --access public --no-git-checks"
     },
     "packageManager": "pnpm@10.11.1"
