--- a/pnpm-workspace.yaml
+++ b/pnpm-workspace.yaml
@@ -3,7 +3,7 @@ packages:
   # every leaf workspace lives here
   - "packages/**"          # cli, config, host, lambda, observables, utils
   - ".papi/descriptors"    # 👈 new line
-  - "examples/*"
+  - "example-apps/*"
   - "integration-tests/*"
   - "scripts/*"
 
