--- a/package.json
+++ b/package.json
@@ -18,7 +18,8 @@
         "turbo": "^2.5.4",
         "typescript": "^5.5.0",
         "vite-tsconfig-paths": "^4.2.0",
-        "vitest": "^3.1.4"
+        "vitest": "^3.1.4",
+        "@dothome/cli": "workspace:*"
     },
     "scripts": {
         "test": "vitest",
