Fixed database issues - added `better-sqlite3` to `pnpm-workspace.yaml` for build scripts - added bin to gitignore (generated for db)

--- a/packages/libraries/host/package.json
+++ b/packages/libraries/host/package.json
@@ -12,7 +12,8 @@
     },
     "devDependencies": {
         "@polkadot-api/descriptors": "workspace:*",
-        "@types/ws": "^8.18.1"
+        "@types/ws": "^8.18.1",
+        "drizzle-kit": "^0.31.1"
     },
     "dependencies": {
         "@dothome/observables": "workspace:*",
