--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
         "packages/*"
     ],
     "devDependencies": {
+        "@dothome/cli": "workspace:*",
         "@rollup/plugin-alias": "^5.0.2",
         "@rollup/plugin-node-resolve": "^15.2.1",
         "@types/better-sqlite3": "^7.6.13",
@@ -12,14 +13,14 @@
         "esbuild": "^0.21.4",
         "polkadot-api": "^1.14.0",
         "rollup": "^4.44.1",
+        "rollup-plugin-copy": "^3.5.0",
         "rollup-plugin-dts": "^6.2.1",
         "rollup-plugin-esbuild": "^6.1.0",
         "tsx": "^4.7.0",
         "turbo": "^2.5.4",
         "typescript": "^5.5.0",
         "vite-tsconfig-paths": "^4.2.0",
-        "vitest": "^3.1.4",
-        "@dothome/cli": "workspace:*"
+        "vitest": "^3.1.4"
     },
     "scripts": {
         "test": "vitest",
