--- a/packages/libraries/host/package.json
+++ b/packages/libraries/host/package.json
@@ -1,10 +1,12 @@
 {
     "name": "@dothome/host",
     "version": "0.0.1",
+    "type": "module",
     "exports": {
         ".": {
-            "types": "./dist/index.d.ts",
-            "import": "./dist/esm/index.mjs"
+            "development": "./src/index.ts",
+            "import": "./dist/esm/index.mjs",
+            "types": "./dist/index.d.ts"
         }
     },
     "peerDependencies": {
@@ -27,6 +29,7 @@
         "rxjs": "^7.8.2"
     },
     "scripts": {
-        "build": "rollup -c ../../../rollup.config.js"
+        "build-core": "rollup -c ../../../rollup.config.js",
+        "build": "pnpm build-core"
     }
 }
